# GardenGuard

./: .gitignore  CMakeLists.txt  README.md
files/: main.cpp
include/: math_utils.h
include/network/: ESP8285.h  mqtt.h
src/: CMakeLists.txt  main.cpp  math_utils.cpp
src/network/: ESP8285.cpp  MQTT.cpp
tests/: CMakeLists.txt  test_main.cpp  test_math_utils.cpp
